--- a/static/inside.css
+++ b/static/inside.css
@@ -23,7 +23,22 @@ a:hover {
   border-color: black;
   border-width: 1px;
   border-style: solid;
+}
+
+#logo {
+  float: left;
+  border: 1px solid black;
+}
+
+#user {
+  float: right;
+  border: 1px solid black;
+}
+
+#title {
+  overflow: hidden;
   text-align: center;
+  border: 1px solid black;
 }
 
 #menu {
@@ -38,5 +53,7 @@ a:hover {
   border-color: black;
   border-width: 1px;
   border-style: solid;
-  float: left;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
