New submission page

--- a/static/inside.css
+++ b/static/inside.css
@@ -19,6 +19,10 @@ a:hover {
   text-decoration: underline;
 }
 
+textarea {
+  resize: none;
+}
+
 #menu {
   border-color: black;
   border-width: 1px;
